--- a/playground.ipynb
+++ b/playground.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,14 +17,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C:/Users/MeliaMuyo/Desktop/ALL/GIRAY/premiership/premier_league_analysis\\epl_2022_2023_07_02_2023.json\n"
+      "['team1_stat', 'team2_stat']\n"
      ]
     }
    ],
@@ -37,7 +37,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "game_ids = df.index.to_list()\n",
+    "home_game_shoots = [int(df[\"team1_stat\"][game_id]['shots_on_target']) for game_id in game_ids if team in df['event'][game_id][0].lower()]\n",
+    "# home_game_shoots = [int(df[\"team1_stat\"][game_id]['shots_on_target']) for game_id in game_ids if team in df['event'][game_id][0].lower()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,14 +99,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C:/Users/MeliaMuyo/Desktop/ALL/GIRAY/premiership/premier_league_analysis\\epl_2022_2023_07_02_2023.json\n"
+      "['team1_stat', 'team2_stat']\n"
      ]
     }
    ],
@@ -105,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +125,7 @@
        "45"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +145,7 @@
        "'7.87%'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,21 +156,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "list indices must be integers or slices, not str",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[5], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mbaban\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtotal_shots\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32mc:\\Users\\MeliaMuyo\\Desktop\\ALL\\GIRAY\\premiership\\premier_league_analysis\\stats_finder\\league_analyzer.py:93\u001b[0m, in \u001b[0;36mgoal_analyzer.total_shots\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     91\u001b[0m game_ids \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdf\u001b[39m.\u001b[39mindex\u001b[39m.\u001b[39mto_list()\n\u001b[0;32m     92\u001b[0m \u001b[39m# Getting team match results and team scores in matches\u001b[39;00m\n\u001b[1;32m---> 93\u001b[0m home_game_shoots \u001b[39m=\u001b[39m [\u001b[39mint\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdf[\u001b[39m\"\u001b[39m\u001b[39mteam1_stat\u001b[39m\u001b[39m\"\u001b[39m][game_id][\u001b[39m'\u001b[39m\u001b[39mshots_on_target\u001b[39m\u001b[39m'\u001b[39m]) \u001b[39mfor\u001b[39;00m game_id \u001b[39min\u001b[39;00m game_ids \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mteam \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdf[\u001b[39m'\u001b[39m\u001b[39mevent\u001b[39m\u001b[39m'\u001b[39m][game_id][\u001b[39m0\u001b[39m]\u001b[39m.\u001b[39mlower()]\n\u001b[0;32m     94\u001b[0m away_game_shoots \u001b[39m=\u001b[39m [\u001b[39mint\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdf[\u001b[39m\"\u001b[39m\u001b[39mteam2_stat\u001b[39m\u001b[39m\"\u001b[39m][game_id][\u001b[39m'\u001b[39m\u001b[39mshots_on_target\u001b[39m\u001b[39m'\u001b[39m]) \u001b[39mfor\u001b[39;00m game_id \u001b[39min\u001b[39;00m game_ids \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mteam \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdf[\u001b[39m'\u001b[39m\u001b[39mevent\u001b[39m\u001b[39m'\u001b[39m][game_id][\u001b[39m0\u001b[39m]\u001b[39m.\u001b[39mlower()]\n\u001b[0;32m     95\u001b[0m home_game_shoots\u001b[39m.\u001b[39mextend(away_game_shoots)\n",
-      "File \u001b[1;32mc:\\Users\\MeliaMuyo\\Desktop\\ALL\\GIRAY\\premiership\\premier_league_analysis\\stats_finder\\league_analyzer.py:93\u001b[0m, in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m     91\u001b[0m game_ids \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdf\u001b[39m.\u001b[39mindex\u001b[39m.\u001b[39mto_list()\n\u001b[0;32m     92\u001b[0m \u001b[39m# Getting team match results and team scores in matches\u001b[39;00m\n\u001b[1;32m---> 93\u001b[0m home_game_shoots \u001b[39m=\u001b[39m [\u001b[39mint\u001b[39m(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mdf[\u001b[39m\"\u001b[39;49m\u001b[39mteam1_stat\u001b[39;49m\u001b[39m\"\u001b[39;49m][game_id][\u001b[39m'\u001b[39;49m\u001b[39mshots_on_target\u001b[39;49m\u001b[39m'\u001b[39;49m]) \u001b[39mfor\u001b[39;00m game_id \u001b[39min\u001b[39;00m game_ids \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mteam \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdf[\u001b[39m'\u001b[39m\u001b[39mevent\u001b[39m\u001b[39m'\u001b[39m][game_id][\u001b[39m0\u001b[39m]\u001b[39m.\u001b[39mlower()]\n\u001b[0;32m     94\u001b[0m away_game_shoots \u001b[39m=\u001b[39m [\u001b[39mint\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdf[\u001b[39m\"\u001b[39m\u001b[39mteam2_stat\u001b[39m\u001b[39m\"\u001b[39m][game_id][\u001b[39m'\u001b[39m\u001b[39mshots_on_target\u001b[39m\u001b[39m'\u001b[39m]) \u001b[39mfor\u001b[39;00m game_id \u001b[39min\u001b[39;00m game_ids \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mteam \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdf[\u001b[39m'\u001b[39m\u001b[39mevent\u001b[39m\u001b[39m'\u001b[39m][game_id][\u001b[39m0\u001b[39m]\u001b[39m.\u001b[39mlower()]\n\u001b[0;32m     95\u001b[0m home_game_shoots\u001b[39m.\u001b[39mextend(away_game_shoots)\n",
-      "\u001b[1;31mTypeError\u001b[0m: list indices must be integers or slices, not str"
-     ]
+     "data": {
+      "text/plain": [
+       "206"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -168,42 +176,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "C:/Users/MeliaMuyo/Desktop/ALL/GIRAY/premiership/premier_league_analysis\\epl_2022_2023_07_02_2023.json\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "shot_accuracy() takes 1 positional argument but 4 were given",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[7], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mbaban\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mshot_accuracy\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdat\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread_df_json\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mC:/Users/MeliaMuyo/Desktop/ALL/GIRAY/premiership/premier_league_analysis/\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mArsenal\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mBen White\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "\u001b[1;31mTypeError\u001b[0m: shot_accuracy() takes 1 positional argument but 4 were given"
-     ]
+     "data": {
+      "text/plain": [
+       "'21.84%'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "baban.shot_accuracy"
+    "baban.shot_accuracy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C:/Users/MeliaMuyo/Desktop/ALL/GIRAY/premiership/premier_league_analysis\\epl_2022_2023_07_02_2023.json\n"
+      "['team1_stat', 'team2_stat']\n"
      ]
     }
    ],
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
        "20"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
