top_10_lineupers method added

--- a/playground.ipynb
+++ b/playground.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,17 +17,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['team1_stat', 'team2_stat']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = dat.read_df_json('C:/Users/MeliaMuyo/Desktop/ALL/GIRAY/premiership/premier_league_analysis/')\n",
     "# df = df.transpose()\n",
@@ -37,86 +29,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "game_ids = df.index.to_list()\n",
-    "home_game_shoots = [int(df[\"team1_stat\"][game_id]['shots_on_target']) for game_id in game_ids if team in df['event'][game_id][0].lower()]\n",
-    "# home_game_shoots = [int(df[\"team1_stat\"][game_id]['shots_on_target']) for game_id in game_ids if team in df['event'][game_id][0].lower()]"
+    "# game_ids = df.index.to_list()\n",
+    "# home_game_starts = [df[\"team1_startings\"][game_id] for game_id in game_ids]\n",
+    "# away_game_starts = [df[\"team2_startings\"][game_id] for game_id in game_ids]\n",
+    "# home_game_starts.extend(away_game_starts)\n",
+    "# d = defaultdict(int)\n",
+    "# for starts in home_game_starts:\n",
+    "#     for i in starts:\n",
+    "#         d[i] += 1\n",
+    "# sorted(d.items(), key=lambda item: item[1], reverse=True)[:10]\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "game_ids = df.index.to_list()\n",
-    "pattern_player = re.compile(rf\"{player}\", re.IGNORECASE)\n",
-    "# Getting team match results and team scores in matches\n",
+    "# game_ids = df.index.to_list()\n",
+    "# pattern_player = re.compile(rf\"{player}\", re.IGNORECASE)\n",
+    "# # Getting team match results and team scores in matches\n",
     "\n",
-    "home_game_starts = [df[\"team1_startings\"][game_id] for game_id in game_ids if player in df['team1_startings'][game_id]]\n",
-    "# home_game_starts = list(map(lambda x: x.lower(), home_game_starts))\n",
-    "home_game_starts = sum([i.count(player) for i in home_game_starts])\n",
-    "away_game_starts = [df[\"team2_startings\"][game_id] for game_id in game_ids if player in df['team2_startings'][game_id]]\n",
-    "# away_game_starts = list(map(lambda x: x.lower(), away_game_starts))\n",
-    "away_game_starts = sum([i.count(player) for i in away_game_starts])\n",
-    "total_line_ups = home_game_starts + away_game_starts\n",
-    "# for games in team_scores:\n",
-    "#     for goal_num in games:\n",
-    "#         goals += int(goal_num)"
+    "# home_game_starts = [df[\"team1_startings\"][game_id] for game_id in game_ids if player in df['team1_startings'][game_id]]\n",
+    "# # home_game_starts = list(map(lambda x: x.lower(), home_game_starts))\n",
+    "# home_game_starts = sum([i.count(player) for i in home_game_starts])\n",
+    "# away_game_starts = [df[\"team2_startings\"][game_id] for game_id in game_ids if player in df['team2_startings'][game_id]]\n",
+    "# # away_game_starts = list(map(lambda x: x.lower(), away_game_starts))\n",
+    "# away_game_starts = sum([i.count(player) for i in away_game_starts])\n",
+    "# total_line_ups = home_game_starts + away_game_starts\n",
+    "# # for games in team_scores:\n",
+    "# #     for goal_num in games:\n",
+    "# #         goals += int(goal_num)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "20\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(total_line_ups)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "shots = 0\n",
-    "    # Looping through team scores to sum team scores in games\n",
-    "for g_shots in home_game_shoots:\n",
-    "    shots += g_shots"
+    "# print(total_line_ups)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['team1_stat', 'team2_stat']\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "# shots = 0\n",
+    "#     # Looping through team scores to sum team scores in games\n",
+    "# for g_shots in home_game_shoots:\n",
+    "#     shots += g_shots"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "baban = stats_finder.goal_analyzer(dat.read_df_json('C:/Users/MeliaMuyo/Desktop/ALL/GIRAY/premiership/premier_league_analysis/'),'Arsenal')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +108,7 @@
        "45"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +128,7 @@
        "'7.87%'"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +148,7 @@
        "206"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +168,7 @@
        "'21.84%'"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,24 +179,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['team1_stat', 'team2_stat']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dede = stats_finder.line_ups(dat.read_df_json('C:/Users/MeliaMuyo/Desktop/ALL/GIRAY/premiership/premier_league_analysis/'),'Arsenal','Ben White')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -222,13 +197,42 @@
        "20"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "dede.line_up_count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('harry kane', 22),\n",
+       " ('tim ream', 22),\n",
+       " ('andreas pereira', 22),\n",
+       " ('james tarkowski', 21),\n",
+       " ('vitaliy mykolenko', 21),\n",
+       " ('alex iwobi', 21),\n",
+       " ('danny ward', 21),\n",
+       " ('david de gea', 21),\n",
+       " ('david raya', 21),\n",
+       " ('mathias jensen', 21)]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dede.top_10_lineupers()"
    ]
   }
  ],
