stat_analyzer_part_done

--- a/playground.ipynb
+++ b/playground.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,90 +16,31 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "df = dat.read_df_json('C:/Users/MeliaMuyo/Desktop/ALL/GIRAY/premiership/premier_league_analysis/')\n",
-    "# df = df.transpose()\n",
-    "team = 'Arsenal'.lower()\n",
-    "player = 'Ben White'.lower()"
+    "### Instantiating goal analyze method for Arsenal"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# game_ids = df.index.to_list()\n",
-    "# home_game_starts = [df[\"team1_startings\"][game_id] for game_id in game_ids]\n",
-    "# away_game_starts = [df[\"team2_startings\"][game_id] for game_id in game_ids]\n",
-    "# home_game_starts.extend(away_game_starts)\n",
-    "# d = defaultdict(int)\n",
-    "# for starts in home_game_starts:\n",
-    "#     for i in starts:\n",
-    "#         d[i] += 1\n",
-    "# sorted(d.items(), key=lambda item: item[1], reverse=True)[:10]\n",
-    "\n"
+    "goal_analyze = stats_finder.goal_analyzer(dat.read_df_json('C:/Users/MeliaMuyo/Desktop/ALL/GIRAY/premiership/premier_league_analysis/'),'arsenal')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Calculating total goals for Arsenal"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# game_ids = df.index.to_list()\n",
-    "# pattern_player = re.compile(rf\"{player}\", re.IGNORECASE)\n",
-    "# # Getting team match results and team scores in matches\n",
-    "\n",
-    "# home_game_starts = [df[\"team1_startings\"][game_id] for game_id in game_ids if player in df['team1_startings'][game_id]]\n",
-    "# # home_game_starts = list(map(lambda x: x.lower(), home_game_starts))\n",
-    "# home_game_starts = sum([i.count(player) for i in home_game_starts])\n",
-    "# away_game_starts = [df[\"team2_startings\"][game_id] for game_id in game_ids if player in df['team2_startings'][game_id]]\n",
-    "# # away_game_starts = list(map(lambda x: x.lower(), away_game_starts))\n",
-    "# away_game_starts = sum([i.count(player) for i in away_game_starts])\n",
-    "# total_line_ups = home_game_starts + away_game_starts\n",
-    "# # for games in team_scores:\n",
-    "# #     for goal_num in games:\n",
-    "# #         goals += int(goal_num)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# print(total_line_ups)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# shots = 0\n",
-    "#     # Looping through team scores to sum team scores in games\n",
-    "# for g_shots in home_game_shoots:\n",
-    "#     shots += g_shots"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "baban = stats_finder.goal_analyzer(dat.read_df_json('C:/Users/MeliaMuyo/Desktop/ALL/GIRAY/premiership/premier_league_analysis/'),'Arsenal')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -108,18 +49,200 @@
        "45"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "baban.total_goals()"
+    "goal_analyze.total_goals()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Showing entire league team goal score chart"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>team_name</th>\n",
+       "      <th>goal_total</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>manchester city</td>\n",
+       "      <td>53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>arsenal</td>\n",
+       "      <td>45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>tottenham hotspur</td>\n",
+       "      <td>41</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>brighton and hove albion</td>\n",
+       "      <td>38</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>brentford</td>\n",
+       "      <td>35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>newcastle united</td>\n",
+       "      <td>34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>manchester united</td>\n",
+       "      <td>34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>liverpool</td>\n",
+       "      <td>34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>leicester city</td>\n",
+       "      <td>32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>fulham</td>\n",
+       "      <td>32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>leeds united</td>\n",
+       "      <td>26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>aston villa</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>chelsea</td>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>bournemouth</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>crystal palace</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>west ham united</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>nottingham forest</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>southampton</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>everton</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>wolverhampton wanderers</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   team_name  goal_total\n",
+       "0            manchester city          53\n",
+       "1                    arsenal          45\n",
+       "2          tottenham hotspur          41\n",
+       "3   brighton and hove albion          38\n",
+       "4                  brentford          35\n",
+       "5           newcastle united          34\n",
+       "6          manchester united          34\n",
+       "7                  liverpool          34\n",
+       "8             leicester city          32\n",
+       "9                     fulham          32\n",
+       "10              leeds united          26\n",
+       "11               aston villa          25\n",
+       "12                   chelsea          22\n",
+       "13               bournemouth          19\n",
+       "14            crystal palace          19\n",
+       "15           west ham united          18\n",
+       "16         nottingham forest          17\n",
+       "17               southampton          17\n",
+       "18                   everton          16\n",
+       "19   wolverhampton wanderers          15"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "goal_analyze.team_scores()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Arsenal`s total goal percent over entire league total goal amount"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -128,18 +251,25 @@
        "'7.87%'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "baban.total_goal_perc()"
+    "goal_analyze.total_goal_perc()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Total shots Arsenal made during entire legue"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -148,18 +278,25 @@
        "206"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "baban.total_shots()"
+    "goal_analyze.total_shots()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Arsenal`s shot to goal accuracy from on target shots they did"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -168,27 +305,41 @@
        "'21.84%'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "baban.shot_accuracy()"
+    "goal_analyze.shot_accuracy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Instantiating line up class"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dede = stats_finder.line_ups(dat.read_df_json('C:/Users/MeliaMuyo/Desktop/ALL/GIRAY/premiership/premier_league_analysis/'),'Arsenal','Ben White')"
+    "lineup_analyze = stats_finder.line_ups(dat.read_df_json('C:/Users/MeliaMuyo/Desktop/ALL/GIRAY/premiership/premier_league_analysis/'),'Arsenal','Ben White')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Lineups for Ben Davies (spesific player used on instantiation)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -197,42 +348,128 @@
        "20"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dede.line_up_count()"
+    "lineup_analyze.line_up_count()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Entire league top 10 lineupers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>player_name</th>\n",
+       "      <th>line_ups</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>harry kane</td>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>tim ream</td>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>andreas pereira</td>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>james tarkowski</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>vitaliy mykolenko</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>alex iwobi</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>danny ward</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>david de gea</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>david raya</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>mathias jensen</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "[('harry kane', 22),\n",
-       " ('tim ream', 22),\n",
-       " ('andreas pereira', 22),\n",
-       " ('james tarkowski', 21),\n",
-       " ('vitaliy mykolenko', 21),\n",
-       " ('alex iwobi', 21),\n",
-       " ('danny ward', 21),\n",
-       " ('david de gea', 21),\n",
-       " ('david raya', 21),\n",
-       " ('mathias jensen', 21)]"
+       "         player_name  line_ups\n",
+       "0         harry kane        22\n",
+       "1           tim ream        22\n",
+       "2    andreas pereira        22\n",
+       "3    james tarkowski        21\n",
+       "4  vitaliy mykolenko        21\n",
+       "5         alex iwobi        21\n",
+       "6         danny ward        21\n",
+       "7       david de gea        21\n",
+       "8         david raya        21\n",
+       "9     mathias jensen        21"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dede.top_10_lineupers()"
+    "lineup_analyze.top_10_lineupers()"
    ]
   }
  ],
